<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:background="@color/colorHint"
            android:orientation="vertical" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            geekui:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            geekui:layout_constraintEnd_toEndOf="@+id/linearLayout5"
            geekui:layout_constraintStart_toStartOf="@+id/linearLayout5"
            geekui:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_checkin_name"
                    style="@style/Widget.Shrine.TextInputLayout"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Nome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/checkin_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_checkin_email"
                    style="@style/Widget.Shrine.TextInputLayout"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_checkin_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"

                    android:hint="Email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/checkin_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>
>
                <Button
                    android:id="@+id/btn_effect_checkin"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:enabled="false"
                    android:background="@drawable/button_background"
                    android:text="@string/btn_effect_checkin"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_checkin_email"/>
            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>