<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.features.eventdetail.ui.EventDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="Detalhes"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_image" />

            <LinearLayout
                android:id="@+id/ll_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_title">

                <ImageView
                    android:id="@+id/icon_date"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/detail_date_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_price_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_date">

                <ImageView
                    android:id="@+id/icon_price"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_money" />

                <TextView
                    android:id="@+id/price_sigle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginStart="10dp"
                    android:text="R$"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/detail_price_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_description_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_price_event" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                android:visibility="gone"
                android:layout_marginEnd="16dp"
                app:layout_anchor="@id/detail_image"
                app:layout_anchorGravity="bottom|end|right"
                app:layout_constraintBottom_toBottomOf="@+id/detail_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image"
                app:srcCompat="@drawable/ic_add" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:tint="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btn_options"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_share"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:tint="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btn_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_menu"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:id="@+id/ll_detail_maps"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/detail_description_event"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/adress"/>

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/detail_maps"
                    android:layout_marginTop="16dp"
                    tools:context=".MapsActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:color/transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>